// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, and manage Foundry agents end-to-end: Docker build, ACR push, hosted/prompt agent create, container start, batch eval, continuous eval, prompt optimizer workflows, FAOS optimization, tracing insights, agent.yaml, dataset curation from traces. USE FOR: deploy agent, hosted agent, create agent, invoke agent, evaluate agent, batch eval, continuous eval, optimize prompt, improve prompt, optimize system prompt, improve agent instructions, FAOS, tracing insights, quality regression, anomaly detection, deploy model, Foundry project, RBAC, role assignment, permissions, quota, capacity, region, troubleshoot agent, deployment failure, create dataset from traces, dataset versioning, eval trending, create AI Services, Cognitive Services, create Foundry resource, provision resource, knowledge index, agent monitoring, customize deployment, onboard, availability. DO NOT USE FOR: Azure Functions, App Service, general Azure deploy (use azure-deploy), general Azure prep (use azure-prepare).",
  "extractedKeywords": [
    "agent",
    "agents",
    "ai",
    "anomaly",
    "assignment",
    "availability",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "batch",
    "build",
    "capacity",
    "cli",
    "cognitive",
    "container",
    "continuous",
    "create",
    "curation",
    "customize",
    "dataset",
    "deploy",
    "deployment",
    "detection",
    "docker",
    "end-to-end",
    "eval",
    "evaluate",
    "failure",
    "faos",
    "foundry",
    "from",
    "functions",
    "general",
    "hosted",
    "improve",
    "index",
    "insights",
    "instructions",
    "invoke",
    "knowledge",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "monitor",
    "monitoring",
    "onboard",
    "optimization",
    "optimize",
    "optimizer",
    "permissions",
    "prep",
    "project",
    "prompt",
    "provision",
    "push",
    "quality",
    "quota",
    "rbac",
    "region",
    "regression",
    "resource",
    "role",
    "service",
    "services",
    "start",
    "system",
    "traces",
    "tracing",
    "trending",
    "troubleshoot",
    "validation",
    "versioning",
    "vnet",
    "workflows",
    "yaml",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "ai",
  "anomaly",
  "assignment",
  "availability",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "batch",
  "build",
  "capacity",
  "cli",
  "cognitive",
  "container",
  "continuous",
  "create",
  "curation",
  "customize",
  "dataset",
  "deploy",
  "deployment",
  "detection",
  "docker",
  "end-to-end",
  "eval",
  "evaluate",
  "failure",
  "faos",
  "foundry",
  "from",
  "functions",
  "general",
  "hosted",
  "improve",
  "index",
  "insights",
  "instructions",
  "invoke",
  "knowledge",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "monitor",
  "monitoring",
  "onboard",
  "optimization",
  "optimize",
  "optimizer",
  "permissions",
  "prep",
  "project",
  "prompt",
  "provision",
  "push",
  "quality",
  "quota",
  "rbac",
  "region",
  "regression",
  "resource",
  "role",
  "service",
  "services",
  "start",
  "system",
  "traces",
  "tracing",
  "trending",
  "troubleshoot",
  "validation",
  "versioning",
  "vnet",
  "workflows",
  "yaml",
]
`;
